--- a/locale/ca/mboximport/mboximport.properties
+++ b/locale/ca/mboximport/mboximport.properties
@@ -46,3 +46,5 @@ isEudora=Aquest fitxer "mbox" sembla que prové del programa Eudora.\nEl Thunder
 isNotMaildir=La carpeta que voleu importar no és una carpeta "Maildir" estàndard
 needTB3=Necessiteu el Thunderbird 3 o superior per usar aquesta funcionalitat
 formatWarning=En l\'exportació en format HTML o text pla, no es desen els fitxer adjunts.\\nSi voleu desar els fitxer adjunts, useu el format EML.\\nVoleu continuar?\\n
+formatWarningImport=If you use this format, it will not be possible to import the exported messages.\nDo you want to continue?\n 
+noPDFmultipleFolders=To export in PDF format, select just one folder
