--- a/locale/de/mboximport/mboximport.properties
+++ b/locale/de/mboximport/mboximport.properties
@@ -46,3 +46,5 @@ isEudora=Diese Mbox-Datei weicht vom Eudora-Standard ab.\nZum Import nach Thunde
 isNotMaildir=Der zu importierende Ordner ist kein MailDir-Ordner.
 needTB3=Für dieses Feature benötigen Sie Thunderbird 3 oder höher.
 formatWarning=Beim Exportieren ins HTML- und Reintext-Format werden keine Anhänge gespeichert.\nWenn Sie die Anhänge ebenfalls speichern möchten, verwenden Sie bitte das Eml-Format.\nMöchten Sie fortfahren?\n
+formatWarningImport=If you use this format, it will not be possible to import the exported messages.\nDo you want to continue?\n 
+noPDFmultipleFolders=To export in PDF format, select just one folder
