--- a/locale/en-US/mboximport/mboximport.properties
+++ b/locale/en-US/mboximport/mboximport.properties
@@ -45,4 +45,8 @@ noMaildirStorage=Impossible to import a "Maildir" folder in an account using ano
 isEudora=This "mbox" file seems to come from Eudora.\nThunderbird can't handle it and so you must convert it in standard "mbox" format.
 isNotMaildir=The folder to import is not a "Maildir" folder
 needTB3=For this feature, you must use Thunderbird 3 or higher
-formatWarning=If you export in this format, the attachments are not saved.\nIf you want to save also the attachments, choose a different format.\nDo you want to go on?\n 
+formatWarning=If you export in this format, the attachments are not saved.\nIf you want to save also the attachments, choose a different format.\nDo you want to continue?
+formatWarningImport=If you use this format, it will not be possible to import the exported messages.\nDo you want to continue?\n 
+noPDFmultipleFolders=To export in PDF format, select just one folder
+isNotStandard=This "mbox" file uses a different format from the Thunderbird folder format\nand it's possible that Thunderbird can't handle it properly.\nDo you want to continue?
+
