--- a/locale/fr/mboximport/mboximport.properties
+++ b/locale/fr/mboximport/mboximport.properties
@@ -46,3 +46,5 @@ isEudora=This "mbox" file seems to come from Eudora.\nThunderbird can't handle i
 isNotMaildir=The folder to import is not a "Maildir" folder
 needTB3=For this feature, you must use Thunderbird 3 or higher
 formatWarning=En exportant au format HTML ou de texte brut, les pièces jointes ne sont pas sauvegardées.\nSi vous souhaitez les enregistrer aussi, utilisez le format EML.\nVoulez-vous continuer ?
+formatWarningImport=If you use this format, it will not be possible to import the exported messages.\nDo you want to continue?\n 
+noPDFmultipleFolders=To export in PDF format, select just one folder
