--- a/locale/gl-ES/mboximport/mboximport.properties
+++ b/locale/gl-ES/mboximport/mboximport.properties
@@ -46,3 +46,5 @@ isEudora=Este ficheiro "mbox" parece vir de Euroda.\nThunderbird non pode manexa
 isNotMaildir=O cartafol a importar non é un cartafol "Maildir"
 needTB3=Para esta funcionalidade, ten que usar Thunderbird 3 ou superior
 formatWarning=Exportando en formato HTML ou texto plano, os anexos non son gardados.\\nSe desexa gardalos, use o formato EML.\\nDesexa continuar?\\n
+formatWarningImport=If you use this format, it will not be possible to import the exported messages.\nDo you want to continue?\n 
+noPDFmultipleFolders=To export in PDF format, select just one folder
