--- a/locale/hu-HU/mboximport/mboximport.properties
+++ b/locale/hu-HU/mboximport/mboximport.properties
@@ -46,3 +46,5 @@ isEudora=Ezt az "mbox" fájlt az Eudora küldte.\nA Thunderbird nem tudja kezeln
 isNotMaildir=Az importálandó mappa nem egy "Maildir" mappa
 needTB3=A funkció használatához legalább a Thunderbird 3 verzió szükséges
 formatWarning=A mellékletek nincsenek elmentve, ha HTML vagy nem formázott szövegként exportál.\\nHa menteni kívánja a mellékleteket is, használja az EML formátumot.\\nÁtvált erre a formátumra most?
+formatWarningImport=If you use this format, it will not be possible to import the exported messages.\nDo you want to continue?\n 
+noPDFmultipleFolders=To export in PDF format, select just one folder
