--- a/locale/it/mboximport/mboximport.properties
+++ b/locale/it/mboximport/mboximport.properties
@@ -45,4 +45,8 @@ noMaildirStorage=Impossibile importare una cartella di tipo "Maildir" in un acco
 isEudora=Questo file "mbox" sembra provenire da Eudora.\nThunderbird non è in grado di gestire questo tipo di file,\nè necessario convertirlo in un file con formato  "mbox" standard.
 isNotMaildir=La cartella da importare non sembra essere una cartella di tipo "Maildir"
 needTB3=Per questa funzione, è necessario usare Thunderbird 3 o superiori
-formatWarning=Esportando in questo formato, gli allegati non vengono salvati.\nSe si desidera salvare anche gli allegati, scegliere un formato differente.\nSi desidera continuare?
+formatWarning=Esportando in questo formato, gli allegati non vengono salvati.\nSe si desidera salvare anche gli allegati, scegliere un formato differente.\nSi desidera continuare?\n
+formatWarningImport=Usando questo formato, non sarà possibile importare in futuro i messaggi esportati.\nSi desidera continuare?\n
+noPDFmultipleFolders=Per esportare in PDF, seleziona una sola cartella
+isNotStandard=Questo file "mbox" usa un formato diverso da quello usato da Thunderbird\ned è possibile che non venga gestito correttamente, specie se proviene da Eudora.\nSi desidera continuare?
+
