--- a/locale/ko-KR/mboximport/mboximport.properties
+++ b/locale/ko-KR/mboximport/mboximport.properties
@@ -46,3 +46,5 @@ isEudora=This "mbox" file seems to come from Eudora.\nThunderbird can't handle i
 isNotMaildir=불러올 폴더가 "Maildir" 폴더가 아닙니다
 needTB3=이 기능은, Thunderbird 3이상에서만 사용할 수 있습니다
 formatWarning=HTML 또는 단순 글로 내보내는 경우 첨부파일은 저장하지 않습니다.\\n만약 첨부파일을 저장하기 원한다면, EML 형식을 사용하세요.\\n계속하길 원하십니까?
+formatWarningImport=If you use this format, it will not be possible to import the exported messages.\nDo you want to continue?\n 
+noPDFmultipleFolders=To export in PDF format, select just one folder
