--- a/locale/nl/mboximport/mboximport.properties
+++ b/locale/nl/mboximport/mboximport.properties
@@ -46,3 +46,5 @@ isEudora=Dit “mbox”-bestand lijkt afkomstig uit Eudora.\nThunderbird kan hie
 isNotMaildir=De te importeren map is geen “maildir”-map
 needTB3=Voor deze functie dient u Thunderbird 3 of hoger te gebruiken
 formatWarning=Bij exporteren in HTML- of platte tekstopmaak worden de bijlagen niet opgeslagen.\nIndien u ook de bijlagen wilt opslaan dient u de EML-opmaak te gebruiken.\nWilt u doorgaan?
+formatWarningImport=Als u deze opmaak gebruikt is het niet mogelijk de geëxporteerde berichten te importeren.\nWilt u doorgaan?\n
+noPDFmultipleFolders=Selecteer slechts één map om te exporteren in PDF-opmaak
