--- a/locale/pl/mboximport/mboximport.properties
+++ b/locale/pl/mboximport/mboximport.properties
@@ -46,3 +46,5 @@ isEudora=Ten plik mbox pochodzi z Eudory.\nAby go obsłużyć, należy najpierw 
 isNotMaildir=Folder do zaimportowania nie jest typem Maildir
 needTB3=Ta funkcja jest dostępna tylko w Thunderbirdzie 3 i nowszych wersjacgh
 formatWarning=Podczas eksportu do formatu tekstowego lub HTML załączniki nie zostaną zapisane.\nJeśli chcesz zapisać także załączniki, użyj formatu EML.\nCzy chcesz kontynuować?\n
+formatWarningImport=If you use this format, it will not be possible to import the exported messages.\nDo you want to continue?\n 
+noPDFmultipleFolders=To export in PDF format, select just one folder
