--- a/locale/pt-PT/mboximport/mboximport.properties
+++ b/locale/pt-PT/mboximport/mboximport.properties
@@ -46,3 +46,5 @@ isEudora=This "mbox" file seems to come from Eudora.\nThunderbird can't handle i
 isNotMaildir=The folder to import is not a "Maildir" folder
 needTB3=For this feature, you must use Thunderbird 3 or higher
 formatWarning=Exportar em HTML ou em formato de texto, não guarda os anexos.\\nSe também desejar guardar os anexos, utilize o formato EML.\\Deseja continuar?\\n
+formatWarningImport=If you use this format, it will not be possible to import the exported messages.\nDo you want to continue?\n 
+noPDFmultipleFolders=To export in PDF format, select just one folder
