--- a/locale/ru/mboximport/mboximport.properties
+++ b/locale/ru/mboximport/mboximport.properties
@@ -46,3 +46,5 @@ isEudora=This "mbox" file seems to come from Eudora.\nThunderbird can't handle i
 isNotMaildir=The folder to import is not a "Maildir" folder
 needTB3=For this feature, you must use Thunderbird 3 or higher
 formatWarning=Вложения не сохраняются при экспортировании в формат HTML или обычного текста.\\nЕсли Вы хотите сохранить также и вложения, используйте формат EML.\\nВы хотите продолжить?
+formatWarningImport=If you use this format, it will not be possible to import the exported messages.\nDo you want to continue?\n 
+noPDFmultipleFolders=To export in PDF format, select just one folder
