--- a/locale/da/mboximport/mboximport.properties
+++ b/locale/da/mboximport/mboximport.properties
@@ -35,8 +35,8 @@ filePickerAppend=Vælg mbox-filen
 virtFolAlert=Virtuelle mapper kan eksporteres i dette format, men kun separat
 exportAborted=Eksport stoppet
 # SMS Backup and Restore\' is the name of an Android application and so maybe it\'s better not to translate it\n
-importSMSandroid=Importer SMS (SMS Backup & Restore til Android)
-noFolderExport=Kunne ikke eksportere.\De valgte mapper er af en anden type eller en af dem er en virtuel mappe.
+importSMSandroid=Importer SMS (SMS Backup and Restore til Android)
+noFolderExport=Kunne ikke eksportere.\De valgte mapper er af en anden type, eller en af dem er en virtuel mappe.
 remoteWarning=Du er ved at eksportere den lokale kopi af en IMAP- eller en NEWS-mappe.\nDen lokale mappe kan ikke indeholde alle de meddelelser som findes i fjernmappen.\nØnsker du at fortsætte?
 offlineWarning=Denne mappe er offline.\Kun de meddelelser der er gemt lokalt vil blive eksporteret. Ønsker du at fortsætte?
 noRemoteExport=Kunne ikke eksportere denne fjernmappe da den ikke er online.
@@ -46,3 +46,5 @@ isEudora=Denne "mbox"-fil ser ud til at komme fra Eudora.\nThunderbird kan ikke 
 isNotMaildir=Mappen til import er ikke en "Maildir"-mappe
 needTB3=Til denne funktion skal du bruge Thunderbird 3 eller højere
 formatWarning=Eksport i HTML eller ren tekstformat gemmer ikke de vedhæftede filer.\nHvis du også ønsker at gemme de vedhæftede filer, brug EML-format.\nVil du fortsætte?\n
+formatWarningImport=Hvis du bruger dette format, vil det ikke være muligt at importere de eksporterede meddelelser.\nVil du fortsætte?\n
+noPDFmultipleFolders=For at eksportere i PDF-format, vælg kun én mappe
